@@ -9,7 +9,7 @@ ECHO = echo
 ECHOFLAGS =
 
 check_PROGRAMS = apcs arithmetic1 arithmetic2 branch builtinvar_endian \
-	copro dsp fp info loadstore loadstore2 loadstore3 misc \
+	copro dsp fp info ldr_from_addr loadstore loadstore2 loadstore3 misc \
 	register_based_map
 ref_PROGRAMS = $(check_PROGRAMS:%=reference/%)
 
