@@ -1,3 +1,9 @@
+Mon Feb 23 13:37:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>
+
+	* m_cpumem.c: Revert r3747 -- LDR|STR Rd,[Rm,#xxx] may have xxx as a
+	register-relative expression if xxx is a field in a map.
+	* regression/{Makefile,ldr_from_addr.s}: Test data for the above.
+
 Mon Feb 23 12:15:00 UTC 2009  John-Mark Bell  <jmb@netsurf-browser.org>
 
 	* decode.c, commands.[ch]: Add support for the INFO directive and the
